; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test1.c_sqlite3TestTextToPtr.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test1.c_sqlite3TestTextToPtr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @sqlite3TestTextToPtr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  %8 = load i8, i8* %7, align 1
  %9 = sext i8 %8 to i32
  %10 = icmp eq i32 %9, 48
  br i1 %10, label %11, label %20

11:                                               ; preds = %1
  %12 = load i8*, i8** %2, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 1
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp eq i32 %15, 120
  br i1 %16, label %17, label %20

17:                                               ; preds = %11
  %18 = load i8*, i8** %2, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 2
  store i8* %19, i8** %2, align 8
  br label %20

20:                                               ; preds = %17, %11, %1
  store i32 0, i32* %4, align 4
  br label %21

21:                                               ; preds = %25, %20
  %22 = load i8*, i8** %2, align 8
  %23 = load i8, i8* %22, align 1
  %24 = icmp ne i8 %23, 0
  br i1 %24, label %25, label %34

25:                                               ; preds = %21
  %26 = load i32, i32* %4, align 4
  %27 = shl i32 %26, 4
  %28 = load i8*, i8** %2, align 8
  %29 = load i8, i8* %28, align 1
  %30 = call i32 @testHexToInt(i8 signext %29)
  %31 = add nsw i32 %27, %30
  store i32 %31, i32* %4, align 4
  %32 = load i8*, i8** %2, align 8
  %33 = getelementptr inbounds i8, i8* %32, i32 1
  store i8* %33, i8** %2, align 8
  br label %21

34:                                               ; preds = %21
  %35 = call i32 @assert(i32 0)
  %36 = load i32, i32* %4, align 4
  store i32 %36, i32* %5, align 4
  %37 = call i32 @memcpy(i8** %3, i32* %5, i32 8)
  %38 = load i8*, i8** %3, align 8
  ret i8* %38
}

declare dso_local i32 @testHexToInt(i8 signext) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @memcpy(i8**, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
